crates/test-files/fixtures/compile_errors/not_emittable.fe
use std::context::Context

enum Color {
    White
    Black
}

struct NotEmittable {
    pub color: Color
}

contract Foo {

    pub fn emit(self, ctx: Context) {
        ctx.emit(NotEmittable ( color: Color::Black ))
    }
}
